--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,7 +6,7 @@
     width: 100%;
     padding: 20px;
     border: none;
-    background-color: var(--BorderHover);
+    background-color: var(--Black);
     color: var(--Paragraph);
 }
 
