--- a/src/components/SliderHome/sliderHome.css
+++ b/src/components/SliderHome/sliderHome.css
@@ -5,18 +5,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  height: 600px; /* You must set a specified height */
+  height: 100vh; /* You must set a specified height */
 }
 
 .each-slide-effect .imageTop .image {
   width: 100%;
-  height: 600px;
+  height: 100vh;
   object-fit:cover ;
   
 }
 .each-slide-effect .imageTop .image img {
   width: 100%;
-  height: 600px;
+  height: 100vh;
   object-fit:cover ;
 }
 
@@ -26,7 +26,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  background-color: rgba(255,255,255);
+  background-color: rgba(0,0,0, 0.8);
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   margin: 50px;
@@ -56,7 +56,7 @@
   margin: 10px 10px 5px 10px;
 }
 .each-slide-effect .imageTop .blockSlider h3 {
-  color: var(--Paragraph);
+  color: var(--BorderHover);
   font-weight: 700;
   margin: 20px 10px 0px 10px;
 }
@@ -68,12 +68,12 @@
   text-decoration: none;
 }
 .each-slide-effect .imageTop .blockSlider h4 {
-  color: var(--Gray);
+  color: var(--BorderHover);
   margin: 0 10px;
   font-weight: 500;
 }
 .each-slide-effect .imageTop .blockSlider h5 {
-  color: var(--Gray);
+  color: var(--BorderHover);
   margin: 10px 7px;
 }
 
@@ -95,13 +95,13 @@
   justify-content: flex-start;
   text-align: center;
   padding: 0px;
-  color: var(--Gray);
+  color: var(--BorderHover);
   width: 100px;
   margin: 5px;
 }
 
 .each-slide-effect .imageTop .blockSlider .iconUnicBox  p {
-  color: var(--Paragraph);
+  color: var(--BorderHover);
   font-weight: 700;
 }
 
@@ -109,7 +109,7 @@
 .each-slide-effect .imageTop .blockSlider .iconUnicBox svg {
   font-size: 18px;
   margin-right: 5px;
-  color: var(--Gray);
+  color: var(--BorderHover);
   margin-top: -2px;
 
 }
@@ -124,7 +124,7 @@
   margin-top: 1px;
 }
 .each-slide-effect .imageTop .blockSlider .iconUnicBox .simbolBox  p {
-  color: var(--Paragraph);
+  color: var(--BorderHover);
   font-weight: 700;
   font-size: 10px;
 }
@@ -140,17 +140,17 @@
 }
 
 .each-slide-effect .imageTop .blockSlider .pricing h6 {
-  color: var(--Gray);
+  color: var(--BorderHover);
   font-weight: 800;
   margin: 2px 5px;
   text-align: flex-start;
 }
 .each-slide-effect .imageTop .blockSlider .pricing h6 span {
   font-weight: 500;
-  color: var(--Gray);
+  color: var(--BorderHover);
 }
 .each-slide-effect .imageTop .blockSlider .pricing h3 {
-  color: var(--Paragraph);
+  color: var(--BorderHover);
   font-weight: 400;
   margin: 2px 5px;
   text-align: flex-end;
@@ -161,11 +161,11 @@
   justify-content: flex-end;
 }
 .each-slide-effect .imageTop .blockSlider .pricing span {
-  color: var(--Paragraph);
+  color: var(--BorderHover);
   font-weight: 800;
 }
 .each-slide-effect .imageTop .blockSlider .pricing h4 {
-  color: var(--Paragraph);
+  color: var(--BorderHover);
   font-weight: 400;
   margin: 2px 5px;
   text-align: flex-end;
@@ -176,7 +176,7 @@
   justify-content: flex-end;
 }
 .each-slide-effect .imageTop .blockSlider .pricing h4 span {
-  color: var(--Paragraph);
+  color: var(--BorderHover);
   font-weight: 800;
 }
 
@@ -187,15 +187,15 @@
   .each-slide-effect .imageTop {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 600px; /* You must set a specified height */
+    justify-content: flex-end;
+    height: 100vh; /* You must set a specified height */
   }
   .each-slide-effect .imageTop .blockSlider {
     width: 500px;
       margin: 10px;
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: rgba(0, 0, 0, 0.8);
   }
 @media (max-width: 530px) {
   .each-slide-effect .imageTop .blockSlider {
