--- a/src/pages/Autos/autos.css
+++ b/src/pages/Autos/autos.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 65px 0;
+    padding: 130px 0 65px 0;
 }
 .Autos .main .data {
     width: 90%;
