--- a/src/components/SliderHome/sliderHome.css
+++ b/src/components/SliderHome/sliderHome.css
@@ -1,12 +1,11 @@
 ﻿
 .each-slide-effect .imageTop {
-  padding-top: 260px;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  height: 100vh; /* You must set a specified height */
+  height:550px; /* You must set a specified height */
 }
 
 .each-slide-effect .imageTop .image {
@@ -186,7 +185,6 @@
 
 @media (max-width: 900px) {
   .each-slide-effect .imageTop {
-    padding-top: 120px;
     width: 100%;
     display: flex;
     flex-direction: row;
