--- a/src/pages/FipeCar/fipeCar.css
+++ b/src/pages/FipeCar/fipeCar.css
@@ -2,14 +2,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
     background-color: var(--White);
     color: var(--Black);
 }
+.FipeCar .blockFipe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    height: 100vh;
+}
 
-.FipeCar .blockImage {
+.FipeCar .blockFipe .blockImage {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,7 +27,7 @@
     background-color: var(--Primary);
 }
 
-.FipeCar .blockImage .imageBlock {
+.FipeCar .blockFipe .blockImage .imageBlock {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,7 +42,7 @@
     /* opacity: 0.9; */
 }
 
-.FipeCar .blockSearch {
+.FipeCar .blockFipe .blockSearch {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,13 +51,13 @@
     height: 100%;
 }
 
-.FipeCar .blockSearch h3 {
+.FipeCar .blockFipe .blockSearch h3 {
     font-weight: 600;
     color: var(--Paragraph);
     margin: 10px;
 }
 
-.FipeCar .blockSearch input {
+.FipeCar .blockFipe .blockSearch input {
     width: 70%;
     padding: 10px 20px;
     border-radius: 10px;
@@ -68,7 +76,7 @@
 
 
 
-.FipeCar .blockSearch button {
+.FipeCar .blockFipe .blockSearch button {
     width: 70%;
     padding: 10px 20px;
     border-radius: 10px;
@@ -79,11 +87,11 @@
 }
 
 @media(max-width:768px) {
-    .FipeCar .blockImage {
+    .FipeCar .blockFipe .blockImage {
         display: none;
     }
 
-    .FipeCar .blockSearch {
+    .FipeCar .blockFipe .blockSearch {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -94,11 +102,11 @@
 
 
     @media(max-width:468px) {
-        .FipeCar .blockSearch input {
+        .FipeCar .blockFipe .blockSearch input {
             width: 90%;
         }
         
-        .FipeCar .blockSearch button {
+        .FipeCar .blockFipe .blockSearch button {
             width: 90%;
         }
     }
